--- a/c02_business/classroom_business.html
+++ b/c02_business/classroom_business.html
@@ -71,7 +71,7 @@
 
         <div class="space-y-6">
 
-            <!-- Module 1 -->
+            <!-- Module 1 (Day 1) -->
             <div
                 class="bg-white rounded-3xl p-1 shadow-xl shadow-slate-200/50 border border-white hover:border-indigo-100 transition-all duration-300 group">
                 <div
@@ -84,12 +84,12 @@
                         <div>
                             <span
                                 class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: 산업별 AI 혁신 사례
-                                (Day 1 오전)</h2>
-                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">금융, 제조, 유통 분야의
-                                Global Top-tier AI 도입 성공 사례 심층 분석</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 1: AI 트렌드와 비즈니스 기회
+                            </h2>
+                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">최신 AI 기술 동향 파악 및 콘텐츠
+                                제작 (8시간)</p>
                         </div>
-                        <a href="lecture_business_class1.html"
+                        <a href="lecture_business_day1.html"
                             class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
@@ -100,22 +100,19 @@
                     <ul class="space-y-3 text-sm text-slate-600 font-medium">
 
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>JPMorgan, Bloomberg 등 금융권 AI
-                                도입 전략</span></li>
-                        <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>Siemens, 현대차의 스마트 팩토리
-                                혁신</span></li>
-                        <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>Nike, Coca-Cola의 초개인화 마케팅
-                                사례</span></li>
-                        <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>국내 AI 도입 성공 및 실패 사례</span>
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>글로벌 AI 트렌드 및 멀티미디어 활용</span>
                         </li>
+                        <li class="flex items-start gap-2"><i
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>비즈니스 AI의 구조적 이해 및 CV
+                                기술</span></li>
+                        <li class="flex items-start gap-2"><i
+                                class="fas fa-check-circle text-indigo-600 mt-1"></i><span>고성능 비즈니스 문서 제작 및 Vibe Coding
+                                기초</span></li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Module 3 -->
+            <!-- Module 2 (Day 2) -->
             <div
                 class="bg-white rounded-3xl p-1 shadow-xl shadow-slate-200/50 border border-white hover:border-blue-100 transition-all duration-300 group">
                 <div
@@ -127,13 +124,13 @@
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-6 relative z-10">
                         <div>
                             <span
-                                class="text-blue-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">03</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 3: 도입 로드맵 및 기획
-                                (Day 2 오전)</h2>
-                            <p class="text-blue-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">우리 기업의 AI 성숙도 진단과
-                                PoC(개념 증명) 프로젝트 기획</p>
+                                class="text-blue-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">02</span>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 2: AI 도입 로드맵 수립
+                            </h2>
+                            <p class="text-blue-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">전략 수립부터 Vibe Coding을
+                                활용한 실무 앱 개발까지 (8시간)</p>
                         </div>
-                        <a href="lecture_business_class3.html"
+                        <a href="lecture_business_day2.html"
                             class="bg-white text-blue-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
@@ -144,15 +141,13 @@
                     <ul class="space-y-3 text-sm text-slate-600 font-medium">
 
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>AI 성숙도 진단 모델(Maturity Model)
-                                적용</span></li>
+                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>AI 성숙도 진단 및 PoC 기획</span></li>
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>성공 확률을 높이는 PoC 과제 선정
-                                매트릭스</span></li>
+                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>프롬프트 엔지니어링 및 NLP/Stat 이해</span>
+                        </li>
                         <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>구체적인 PoC 수행 계획서 작성</span></li>
-                        <li class="flex items-start gap-2"><i
-                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>AI 도입 장애요인 및 극복 방안</span></li>
+                                class="fas fa-check-circle text-blue-600 mt-1"></i><span>Vibe Coding 기반 업무 앱 개발
+                                실습</span></li>
                     </ul>
                 </div>
             </div>
