--- a/c02_business/lecture_business_day1.html
+++ b/c02_business/lecture_business_day1.html
@@ -52,7 +52,8 @@
             </div>
             <div class="space-y-6">
                 <!-- Session 1 -->
-                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-blue-300 transition-all">
+                <div
+                    class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-blue-300 transition-all">
                     <div class="flex flex-col md:flex-row gap-4 items-start">
                         <div class="flex-shrink-0 w-full md:w-32 bg-blue-50 rounded-xl p-3 text-center">
                             <span class="block text-blue-700 font-bold text-lg">09:00</span>
@@ -62,7 +63,8 @@
                         <div class="flex-grow space-y-3">
                             <div>
                                 <h3 class="text-xl font-bold text-slate-800">글로벌 AI 비즈니스 트렌드 및 멀티미디어 활용</h3>
-                                <p class="text-slate-500 text-sm mt-1">2026년 AI 트렌드를 이해하고, 기업 실무(보고서/홍보 콘텐츠 제작)에 미치는 변화를 파악</p>
+                                <p class="text-slate-500 text-sm mt-1">2026년 AI 트렌드를 이해하고, 기업 실무(보고서/홍보 콘텐츠 제작)에 미치는 변화를
+                                    파악</p>
                             </div>
                             <div class="grid md:grid-cols-2 gap-4 text-sm bg-slate-50 p-4 rounded-xl">
                                 <div>
@@ -78,9 +80,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">역량</span>
                                         <span class="text-slate-600">최신 AI 기술 동향 파악 및 콘텐츠 제작</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span class="inline-block bg-blue-100 text-blue-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 1, 2</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -89,7 +101,8 @@
                 </div>
 
                 <!-- Session 2 -->
-                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-indigo-300 transition-all">
+                <div
+                    class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-indigo-300 transition-all">
                     <div class="flex flex-col md:flex-row gap-4 items-start">
                         <div class="flex-shrink-0 w-full md:w-32 bg-indigo-50 rounded-xl p-3 text-center">
                             <span class="block text-indigo-700 font-bold text-lg">11:00</span>
@@ -115,10 +128,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">역량</span>
                                         <span class="text-slate-600">AI 기본 원리 기반 비즈니스 응용력</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span class="inline-block bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 8, 11, 23</span>
-                                        <span class="inline-block bg-green-100 text-green-700 px-2 py-0.5 rounded text-xs font-bold ml-1">AI4Sus 10</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -127,7 +149,8 @@
                 </div>
 
                 <!-- Session 3 -->
-                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-purple-300 transition-all">
+                <div
+                    class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-purple-300 transition-all">
                     <div class="flex flex-col md:flex-row gap-4 items-start">
                         <div class="flex-shrink-0 w-full md:w-32 bg-purple-50 rounded-xl p-3 text-center">
                             <span class="block text-purple-700 font-bold text-lg">13:00</span>
@@ -152,9 +175,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">역량</span>
                                         <span class="text-slate-600">시각 데이터 처리(CV) 및 생성 원리 습득</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span class="inline-block bg-purple-100 text-purple-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 20~23, 31</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +196,8 @@
                 </div>
 
                 <!-- Session 4 -->
-                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-pink-300 transition-all">
+                <div
+                    class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-pink-300 transition-all">
                     <div class="flex flex-col md:flex-row gap-4 items-start">
                         <div class="flex-shrink-0 w-full md:w-32 bg-pink-50 rounded-xl p-3 text-center">
                             <span class="block text-pink-700 font-bold text-lg">14:00</span>
@@ -189,9 +223,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">역량</span>
                                         <span class="text-slate-600">LLM 기반 기획안/보고서/슬라이드 자동 생성</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span class="inline-block bg-pink-100 text-pink-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 32</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +244,8 @@
                 </div>
 
                 <!-- Session 5 -->
-                <div class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-emerald-300 transition-all">
+                <div
+                    class="bg-white p-6 rounded-2xl border border-slate-200 card-shadow hover:border-emerald-300 transition-all">
                     <div class="flex flex-col md:flex-row gap-4 items-start">
                         <div class="flex-shrink-0 w-full md:w-32 bg-emerald-50 rounded-xl p-3 text-center">
                             <span class="block text-emerald-700 font-bold text-lg">16:00</span>
@@ -225,9 +270,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">역량</span>
                                         <span class="text-slate-600">Google AI Studio 기반 자연어 앱 개발 입문</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span class="inline-block bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW 32</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
