--- a/c02_business/lecture_business_day2.html
+++ b/c02_business/lecture_business_day2.html
@@ -79,11 +79,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">목표</span>
                                         <span class="text-slate-600">RGC 기법을 활용한 학과목 인공지능 융합설계 기획안 작성</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span
-                                            class="inline-block bg-blue-100 text-blue-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW
-                                            33, 35</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -118,11 +126,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">목표</span>
                                         <span class="text-slate-600">통계에서의 ML 기법 및 LLM을 활용한 통계처리</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span
-                                            class="inline-block bg-indigo-100 text-indigo-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW
-                                            24~27, 8, 17~19</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -157,10 +173,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">목표</span>
                                         <span class="text-slate-600">API 활용 앱개발 및 전공과목 모델링 이해</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span
-                                            class="inline-block bg-gray-100 text-gray-500 px-2 py-0.5 rounded text-xs font-bold">-</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -195,11 +220,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">목표</span>
                                         <span class="text-slate-600">개발툴을 사용하여 행정에 필요한 앱 개발능력 확보</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span
-                                            class="inline-block bg-pink-100 text-pink-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW
-                                            7, 13</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -234,11 +267,19 @@
                                         <span class="font-bold text-slate-700 block mb-1">목표</span>
                                         <span class="text-slate-600">AI 윤리적 사용 및 과정 종합</span>
                                     </div>
-                                    <div>
-                                        <span class="font-bold text-slate-700 block mb-1">관련 모듈</span>
-                                        <span
-                                            class="inline-block bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded text-xs font-bold">AI4FW
-                                            28, 29</span>
+                                    <div class="mt-4 flex flex-wrap gap-2">
+                                        <a href="#"
+                                            class="bg-blue-50 text-blue-600 hover:bg-blue-100 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-book-open"></i> 강의 보기
+                                        </a>
+                                        <a href="/ai-lecture-room/dist/index.html" target="_blank"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-play-circle"></i> 강의 듣기
+                                        </a>
+                                        <button onclick="alert('등록된 자료가 없습니다.')"
+                                            class="bg-indigo-600 text-white hover:bg-indigo-700 transition-colors px-3 py-2 rounded-lg text-xs font-bold flex items-center gap-1">
+                                            <i class="fas fa-file-pdf"></i> PDF
+                                        </button>
                                     </div>
                                 </div>
                             </div>
